ignore IntelliJ IDEA project files

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,16 @@ buildNumber.properties
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
+
+#
+# IntelliJ IDEA project files
+#
+.idea*/
+*.ipr
+*.iml
+*.iws
+*.ids
+*.deb
+classes*/
+out*/
+gen-external-apklibs*/
