--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,14 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot</artifactId>
+                <version>1.3.5.RELEASE</version>
+                <scope>test</scope>
+            </dependency>
+
+            <!--submodules-->
+            <dependency>
                 <groupId>org.kpfu.tools.arthur.gazizov.machine.learning</groupId>
                 <artifactId>kpfu-mls-api-dcu-rest</artifactId>
                 <version>${project.version}</version>
