CA-2 Dataset CRUD operations

--- a/kpfu-mls-api-dcu-exception/pom.xml
+++ b/kpfu-mls-api-dcu-exception/pom.xml
@@ -13,5 +13,10 @@
     <artifactId>kpfu-mls-api-dcu-exception</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
-    
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+    </dependencies>
 </project>
