--- a/kpfu-mls-api-dcu-rest/pom.xml
+++ b/kpfu-mls-api-dcu-rest/pom.xml
@@ -13,5 +13,22 @@
     <artifactId>kpfu-mls-api-dcu-rest</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
-    
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.kpfu.tools.arthur.gazizov.machine.learning</groupId>
+            <artifactId>kpfu-mls-api-dcu-server</artifactId>
+        </dependency>
+    </dependencies>
 </project>
