--- a/kpfu-mls-api-dcu-validator/pom.xml
+++ b/kpfu-mls-api-dcu-validator/pom.xml
@@ -18,5 +18,13 @@
             <groupId>org.kpfu.tools.arthur.gazizov.machine.learning</groupId>
             <artifactId>kpfu-mls-api-dcu-dto</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+        </dependency>
     </dependencies>
 </project>
