--- a/kpfu-mls-api-dcu-web-utils/pom.xml
+++ b/kpfu-mls-api-dcu-web-utils/pom.xml
@@ -13,5 +13,18 @@
     <artifactId>kpfu-mls-api-dcu-web-utils</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
-    
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.kpfu.tools.arthur.gazizov.machine.learning</groupId>
+            <artifactId>kpfu-mls-api-dcu-dto</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.kpfu.tools.arthur.gazizov.machine.learning</groupId>
+            <artifactId>kpfu-mls-api-dcu-exception</artifactId>
+        </dependency>
+    </dependencies>
 </project>
