--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.kpfu.tools.arthur.gazizov.machine.learning</groupId>
         <artifactId>kpfu-tools-arthur-gazizov-machine-learning-parent-pom</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.2-SNAPSHOT</version>
     </parent>
 
     <modules>
