--- a/kpfu-mls-api-dcu-rest/pom.xml
+++ b/kpfu-mls-api-dcu-rest/pom.xml
@@ -73,5 +73,9 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
     </dependencies>
 </project>
