--- a/kpfu-mls-api-dcu-dao/pom.xml
+++ b/kpfu-mls-api-dcu-dao/pom.xml
@@ -44,6 +44,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.kpfu.tools.arthur.gazizov.machine.learning</groupId>
+            <artifactId>kpfu-mls-api-dcu-exception</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
