--- a/kpfu-mls-api-dcu-rest/src/main/resources/application.properties
+++ b/kpfu-mls-api-dcu-rest/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.maxActive=20
 spring.datasource.maxIdle=20
 spring.datasource.minIdle=1
 spring.datasource.initialSize=1
+
+dcu.enableFsMicroservice=false
+dcu.mlsFsServerUrl=http://localhost:7050
