ML-9 DCU: image uploading

--- a/kpfu-mls-api-dcu-rest/src/main/resources/application.properties
+++ b/kpfu-mls-api-dcu-rest/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.datasource.initialSize=1
 
 dcu.enableFsMicroservice=false
 dcu.mlsFsServerUrl=http://localhost:7050
+dcu.imageStorePath=/Users/arthurgazizov/tmp/dcu/images/
