--- a/kpfu-mls-api-dcu-dto/pom.xml
+++ b/kpfu-mls-api-dcu-dto/pom.xml
@@ -17,11 +17,11 @@
     <parent>
         <groupId>org.kpfu.tools.arthur.gazizov.machine.learning</groupId>
         <artifactId>kpfu-mls-api-dcu</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
 
     <artifactId>kpfu-mls-api-dcu-dto</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
 
     
 </project>
