--- a/kpfu-mls-api-dcu-exception/pom.xml
+++ b/kpfu-mls-api-dcu-exception/pom.xml
@@ -7,11 +7,11 @@
     <parent>
         <groupId>org.kpfu.tools.arthur.gazizov.machine.learning</groupId>
         <artifactId>kpfu-mls-api-dcu</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
 
     <artifactId>kpfu-mls-api-dcu-exception</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
 
     <dependencies>
         <dependency>
