--- a/kpfu-mls-api-dcu-rest/pom.xml
+++ b/kpfu-mls-api-dcu-rest/pom.xml
@@ -7,11 +7,11 @@
     <parent>
         <groupId>org.kpfu.tools.arthur.gazizov.machine.learning</groupId>
         <artifactId>kpfu-mls-api-dcu</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
 
     <artifactId>kpfu-mls-api-dcu-rest</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <properties>
         <build.with.swagger.api.package>org.kpfu.tools.arthur.gazizov.machine.learning.dcu.rest.api
         </build.with.swagger.api.package>
