--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 
     <artifactId>kpfu-mls-api-dcu</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>pom</packaging>
 
     <parent>
