--- a/kpfu-mls-api-dcu-dao/pom.xml
+++ b/kpfu-mls-api-dcu-dao/pom.xml
@@ -7,11 +7,11 @@
     <parent>
         <groupId>org.kpfu.tools.arthur.gazizov.machine.learning</groupId>
         <artifactId>kpfu-mls-api-dcu</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>kpfu-mls-api-dcu-dao</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
 
     <properties>
         <dao.sql.url>jdbc:postgresql://localdockerhost:5432/kpfu_dcu</dao.sql.url>
