--- a/kpfu-mls-api-dcu-rest/src/main/resources/application.properties
+++ b/kpfu-mls-api-dcu-rest/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=8080
-
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=admin
 spring.datasource.password=t110aspirin
@@ -11,7 +10,8 @@ spring.datasource.maxActive=20
 spring.datasource.maxIdle=20
 spring.datasource.minIdle=1
 spring.datasource.initialSize=1
-
 dcu.enableFsMicroservice=true
 dcu.mlsFsServerUrl=http://localhost:7050
 dcu.imageStorePath=/Users/arthurgazizov/tmp/dcu/images/
+dcu.enableInference=false
+dcu.enableInferenceMicroservice=false
