--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
 
@@ -28,7 +29,7 @@
 
     <properties>
         <kpfu.mls.fs.version>0.0.1-SNAPSHOT</kpfu.mls.fs.version>
-        <kpfu.mls.db.version>0.0.2</kpfu.mls.db.version>
+        <kpfu.mls.db.version>0.0.3-SNAPSHOT</kpfu.mls.db.version>
     </properties>
 
     <dependencyManagement>
