ML-19 DCU: use engine inference client & enable this in config

--- a/kpfu-mls-api-dcu-rest/src/main/resources/application.properties
+++ b/kpfu-mls-api-dcu-rest/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.datasource.minIdle=1
 spring.datasource.initialSize=1
 dcu.enableFsMicroservice=true
 dcu.mlsFsServerUrl=http://localhost:7050
+dcu.mlsEngineInferenceServerUrl=http://localhost:7051
 dcu.imageStorePath=/Users/arthurgazizov/tmp/dcu/images/
-dcu.enableInference=false
-dcu.enableInferenceMicroservice=false
+dcu.enableInference=true
+dcu.enableInferenceMicroservice=true
