--- a/kpfu-mls-api-dcu-client/pom.xml
+++ b/kpfu-mls-api-dcu-client/pom.xml
@@ -13,5 +13,22 @@
     <artifactId>kpfu-mls-api-dcu-client</artifactId>
     <version>0.0.2-SNAPSHOT</version>
 
-    
+    <dependencies>
+        <dependency>
+            <groupId>org.kpfu.tools.arthur.gazizov.machine.learning</groupId>
+            <artifactId>kpfu-mls-api-dcu-dto</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+    </dependencies>
 </project>
