ML-27 DCU: split db to db & test

--- a/kpfu-mls-api-dcu-rest/src/test/resources/application.properties
+++ b/kpfu-mls-api-dcu-rest/src/test/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=admin
 spring.datasource.password=t110aspirin
-spring.datasource.url=jdbc:postgresql://localhost:5432/kpfu_dcu?ApplicationName=kpfu-mls-api-dcu
+spring.datasource.url=jdbc:postgresql://localhost:5432/kpfu_dcu_test?ApplicationName=kpfu-mls-api-dcu
 spring.datasource.testOnBorrow=true
 spring.datasource.validationInterval=10000
 spring.datasource.validationQuery=SELECT 1
